--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ onload=onloadTurnstileCallback" defer></script>
 <div id="myWidget"></div>
 <div id="alert"></div>
 
-<form action="/action_page.php" id="myid" style="display:none">
+<form action="/action_page.php" id="myid" style="display:block">
     <label for="fname">First name:</label><br>
     <input type="text" id="fname" name="fname" value=" "><br>
     <label for="lname">Last name:</label><br>
